fixed index margins and sizes

--- a/templates/evaluation.html
+++ b/templates/evaluation.html
@@ -109,7 +109,7 @@
 <body>
 <div class="container">
     <img src="{{ url_for('static', filename='logos/ease_logo.png') }}" alt="E.A.S.E. Logo" class="logo">
-    <p><b>Summary Statistics of your Conversation:</b></p>
+    <p><b>Your Conversation Statistics:</b></p>
 
     <div class="chart-container">
         <div class="chart">
