--- a/templates/index.html
+++ b/templates/index.html
@@ -49,12 +49,13 @@
 
         #transcript-container {
             width: 100%; /* Take full width of the container */
-            /* background-color: #66c4d8; */ /* REMOVE BLUE BOX */
             border-radius: 10px;
             padding: 1rem;
             margin-bottom: 0.5rem;
             text-align: left;
             box-sizing: border-box;
+            border: 5px solid #66c4d8;  /* Solid light blue border */
+            border-radius: 5px; /* Round the corners */
         }
 
         #transcript {
@@ -71,7 +72,6 @@
             line-height: 1.6;
             white-space: pre-wrap;
             box-sizing: border-box;
-            border: 5px solid #66c4d8; /* add the border to transcript section instead */
         }
 
         .chart-container {
@@ -187,7 +187,7 @@
     <div class="chart-container">
         <img id="emotion-chart" src="" alt="Emotion Chart" style="display: none;">
         <div class="filler-count-container">
-            <p class="filler-count-header">Current Filler Words Usage<span class="usage-color">:</span></p>
+            <p class="filler-count-header">Current Filler Words Usage:</p>
             <span class="filler-count" id="filler-count">0</span>
         </div>
     </div>
