--- a/templates/index.html
+++ b/templates/index.html
@@ -83,15 +83,15 @@
         }
 
         #emotion-chart {
-            max-width: 500px;
-            flex: 2; /* Take up more space */
+            max-width: 700px; /* Increased size */
+            flex: 3; /* Take up more space */
             transition: opacity 0.5s ease; /* Fade-in effect */
             padding-right: 20px; /* Add padding */
         }
 
         .filler-count-container {
-            width: 120px;  /* Reduced size */
-            height: 120px; /* Reduced size */
+            width: 100px;  /* Reduced size */
+            height: 100px; /* Reduced size */
             border-radius: 50%;
             background-color: #d3f0e4; /* Very light shade of green */
             color: #1d2f4b; /* Dark Grey Text */
