--- a/templates/evaluation.html
+++ b/templates/evaluation.html
@@ -6,6 +6,7 @@
     <title>Evaluation - E.A.S.E.</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
+        /* Existing CSS styles */
         body {
             font-family: 'Roboto', sans-serif;
             background-color: #ffffff;
@@ -58,10 +59,14 @@
             justify-content: space-around;
             width: 100%;
             margin-bottom: 1rem; /* Reduce margin */
+            
         }
 
         .chart {
             width: 45%; /* Adjust as needed */
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
         .chart img {
@@ -105,6 +110,7 @@
             background: linear-gradient(to bottom, #ffffff, #66c4d8);
         }
 
+        /* Progress bar styles */
         .bottom-charts {
             display: flex;
             justify-content: space-around;
@@ -113,35 +119,21 @@
             margin-bottom: 2rem;
         }
 
-        .bottom-chart {
+         .bottom-chart {
             width: 45%;
-        }
-
-        .bottom-chart img {
-            max-height: 250px;
-            width: 100%;
-            object-fit: contain;
-        }
-        .chart-container {
             display: flex;
-            justify-content: space-around; /* Distribute items evenly */
-            width: 100%;
-            margin-bottom: 2rem;
-            align-items: flex-start; /* Align items to the top */
-        }
-
-        .bottom-charts {
-        display: flex;
-        justify-content: space-around; /* Distribute items evenly */
-        align-items: center; /* Align items vertically */
-        width: 100%;
-        margin-bottom: 2rem;
-        }
+            justify-content: center;
+            align-items: center;
+}
 
         .lexical-container {
-        text-align: center;
-        }
+            text-align: center;
+            width: 45%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
+        }
     </style>
 </head>
 <body>
@@ -159,10 +151,13 @@
     </div>
 
     <div class="bottom-charts">
-        <div class = "lexical-container">
-        <img src="data:image/png;base64,{{ lexical_score_chart }}" alt="Lexical Quality Score" style="max-height: 250px;">
+          <div class="lexical-container">
+           {% if lexical_score_chart %}
+        <img src="data:image/png;base64,{{ lexical_score_chart }}" alt="Lexical Quality Score"  style="max-height: 250px;"/>
+        {% else %}
+        <p>Lexical Quality Score not available</p>
+        {% endif %}
         </div>
-        
         <div class="bottom-chart">
             <img src="data:image/png;base64,{{ top_emotions_chart }}" alt="Top Emotions Chart">
         </div>
